# mlops-template

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  models.py
backend/ml/: data.py  train.py
frontend/: Dockerfile  streamlit_main.py
ml/: models.py
